--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,11 @@ dependencies:
   image_picker: ^1.0.6
   url_launcher: ^6.0.0
   provider: ^6.0.5
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -65,6 +65,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+assets:
+  - google_fonts/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
