--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,8 +65,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
 assets:
   - google_fonts/
+  - lib/assets/images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
