Added images and bookmark functionalities

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,7 +68,7 @@ flutter:
 
 assets:
   - google_fonts/
-  - lib/assets/images/
+  - images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
