--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,8 +67,8 @@ flutter:
   uses-material-design: true
 
 assets:
+  - lib/images/logo.png
   - google_fonts/
-  - images/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
