--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   url_launcher: ^6.0.0
   provider: ^6.0.5
   google_fonts: ^6.2.1
+  google_maps_flutter: ^2.6.1
+  # location: ^5.0.0
 
 dev_dependencies:
   flutter_test:
