--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,9 +68,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-assets:
-  - lib/images/logo.png
-  - google_fonts/
+  assets:
+    - lib/images/logo.png
+    - lib/images/Logo_white.png
+    - google_fonts/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
