--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,17 @@ dependencies:
   provider: ^6.0.5
   google_fonts: ^6.2.1
   google_maps_flutter: ^2.6.1
+  
   # location: ^5.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.13.1"
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/images/icon.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
